# agenticmemo

./: .gitignore  LICENSE  README.md  pyproject.toml
agenticmemo/: __init__.py  config.py  exceptions.py  types.py  version.py
agenticmemo/core/: __init__.py  agent.py  executor.py  planner.py
agenticmemo/learning/: __init__.py  failure_miner.py  filters.py  grpo.py  hints.py  reflexion.py  skill_consolidator.py
agenticmemo/llm/: __init__.py  anthropic_llm.py  base.py  openai_llm.py
agenticmemo/memory/: __init__.py  base.py  case.py  graph_memory.py  hierarchical.py  shared.py
agenticmemo/retrieval/: __init__.py  bm25.py  embeddings.py  ensemble.py
agenticmemo/tools/: __init__.py  base.py  builtin.py  registry.py
benchmarks/: mock_llm.py  run_benchmark.py  tasks.py
examples/: basic_agent.py  custom_tool.py  multi_task_memory.py
tests/: test_learning.py  test_memory.py  test_phase4.py  test_retrieval.py  test_tools.py
